# CG-FPSGame

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  sceneSaver.cpp
doc/: Document.md  Models.md  README.md  Shadow.md  Transform.md
include/: Audio.h  Camera.h  FrameTime.h  GameObject.h  Graphic.h  Gui.h  Gun.h  Hitbox.h  Input.h  Light.h  LittleGun.h  MK14.h  Material.h  Mesh.h  Model.h  ObjLoader.h  P1911.h  ParticleSystem.h  Plane.h  Resource.h  Scene.h  Shader.h  Skybox.h  SolarSystem.h  Texture.h  Transform.h  Vertex.h  obj_loader.h  sceneReader.h  sceneSaver.h
include/glad/: glad.h
lib/glm/: copying.txt
resources/models/M24/: M24_R_High_Poly_Version_obj.mtl  M24_R_Low_Poly_Version_obj.mtl
resources/models/aircraft/: Aircraft_obj.mtl
resources/models/brick/: cube.mtl
resources/models/camp/: Campfire.mtl
resources/models/cobble/: cobble_ground.mtl
resources/models/container/: Container.mtl
resources/models/cottage/: cottage_obj.mtl
resources/scenes/: scene.xml  scene2.xml
shader/: Render.fs  Render.vs  Update.gs  Update.vs  Update_bk.gs  blur.frag  hdr.frag  light.frag  light.vert  main.frag  main.vert  main_v2.frag  main_v2.vert  showTexture.frag  skybox.frag  skybox.vert  ssao.frag  ssaoBlur.frag
src/: Audio.cpp  Camera.cpp  FrameTime.cpp  GameObject.cpp  Graphic.cpp  Gui.cpp  Hitbox.cpp  Input.cpp  Light.cpp  Mesh.cpp  Model.cpp  ObjLoader.cpp  ParticleSystem.cpp  Plane.cpp  Resource.cpp  Scene.cpp  Shader.cpp  Skybox.cpp  SolarSystem.cpp  Transform.cpp  glad.c  main.cpp  sceneReader.cpp  sceneSaver.cpp
(+11 files in other folders)
